--- a/depend/build.gradle
+++ b/depend/build.gradle
@@ -21,4 +21,7 @@ android {
 
 dependencies {
     implementation 'com.tonyodev.fetch2:fetch2:3.0.12'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.tencent:mmkv:1.2.11'
 }
